@@ -6,39 +6,14 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
-// no direct access
+// No direct access.
 defined('_JEXEC') or die;
 
-$db = &JFactory::getDbo();
-$query = 'SELECT a.hits, a.id, a.sectionid, a.title, a.created, u.name'
-. ' FROM #__content AS a'
-. ' LEFT JOIN #__users AS u ON u.id=a.created_by'
-. ' WHERE a.state <> -2'
-. ' ORDER BY hits DESC'
-;
-$db->setQuery($query, 0, 10);
-$rows = $db->loadObjectList();
-?>
+// Include the mod_online functions only once.
+require_once dirname(__FILE__).'/helper.php';
 
-<table class="adminlist" summary="<?php echo JText::_('MOD_POPULAR_TABLE_SUMMARY'); ?>">
-	<thead>
-		<tr>
-			<th><?php echo JText::_('Most Popular Items'); ?></th>
-			<th><?php echo JText::_('Created'); ?></th>
-			<th><?php echo JText::_('Hits'); ?></th>
-		</tr>
-	</thead>
-<?php
-foreach ($rows as $row)
-{
-	$link = 'index.php?option=com_content&amp;task=edit&amp;id='. $row->id;
-	?>
-	<tr>
-		<td><a href="<?php echo $link; ?>"><?php echo htmlspecialchars($row->title, ENT_QUOTES, 'UTF-8');?></a></td>
-		<td class="center"><?php echo JHtml::_('date', $row->created, '%Y-%m-%d %H:%M:%S'); ?></td>
-		<td class="center"><?php echo $row->hits;?></td>
-	</tr>
-	<?php
+// Get the logged-in users.
+if ($rows = modPopularHelper::getList($params)) {
+	// Render the module
+	require JModuleHelper::getLayoutPath('mod_popular', $params->get('layout', 'default'));
 }
-?>
-</table>
